--- a/Lista - Kits/index.html
+++ b/Lista - Kits/index.html
@@ -23,9 +23,9 @@
             <img class="logo" src="./Imagens/logo goro 1.png" alt="logotipo" />
           </a>
           <ul class="menu--lista">
-            <li><a href="#">CERVEJAS</a></li>
-            <li><a href="#">ACESSÓRIOS</a></li>
-            <li><a href="#">KITS</a></li>
+            <li><a href="../Lista-de-Produtos---Cerveja-master/index.html">CERVEJAS</a></li>
+            <li><a href="../Lista - Acessórios/index.html">ACESSÓRIOS</a></li>
+            <li><a href="../Lista - Kits/index.html">KITS</a></li>
           </ul>
         </nav>
 
@@ -41,7 +41,7 @@
               >
             </li>
             <li>
-              <a href="#"
+              <a href="../carrinho de compras.html"
                 ><img
                   class="carrinho"
                   src="./Imagens/carrinho.png"
