--- a/Login.html
+++ b/Login.html
@@ -57,7 +57,7 @@
 			<nav class="redes">
 				<ul class="menu__lista">
 					<li class="menu__item">
-						<a class="menu__link" href="#"
+						<a class="menu__link" href="./Login.html"
 							><img
 								class="redes__logo"
 								alt="Login"
