Arrumei o link para a pág Kits

--- a/Lista-de-Produtos---Cerveja-master/index.html
+++ b/Lista-de-Produtos---Cerveja-master/index.html
@@ -25,7 +25,7 @@
           <ul class="menu--lista">
             <li><a href="../Lista-de-Produtos---Cerveja-master/index.html">CERVEJAS</a></li>
             <li><a href="../Lista - Acessórios/index.html">ACESSÓRIOS</a></li>
-            <li><a href="../Lista - Kits/">KITS</a></li>
+            <li><a href="../Lista - Kits/index.html">KITS</a></li>
           </ul>
         </nav>
 
