Arrumei o link do logo para a página index

--- a/home-loja.html
+++ b/home-loja.html
@@ -23,7 +23,7 @@
 <body>
 	<header class="cabecalho">
 		<nav class="menu">
-			<a class="menu__link" href="./home-loja.html"><img class="logo" alt="Logo Goró"
+			<a class="menu__link" href="./index.html"><img class="logo" alt="Logo Goró"
 					src="./img/logo goro 1.png" />
 			</a>
 			<ul class="menu__lista">
