Adicionei o link de ACESSÓRIOS ao botão VER CAMISETAS

--- a/home-loja.html
+++ b/home-loja.html
@@ -115,7 +115,7 @@
 							Chique e confortável! Garanta a camiseta que
 							<br />combina com a sua cerveja favorita.
 						</p>
-						<a href="#">VER CAMISETAS</a>
+						<a href="./Lista - Acessórios/index.html">VER CAMISETAS</a>
 					</div>
 				</div>
 			</div>
