--- a/cadastro.html
+++ b/cadastro.html
@@ -36,7 +36,7 @@
 				
 				<ul class="menu__lista">
 					<li class="menu__item">
-						<a class="menu__linka" href="#">CERVEJAS</a>
+						<a class="menu__linka" href="./Lista-de-Produtos---Cerveja-master/index.html">CERVEJAS</a>
 					</li>
 					<li class="menu__item">
 						<a class="menu__linka" href="./Lista - Acessórios/index.html">ACESSÓRIOS</a>
