--- a/carrinho de compras.html
+++ b/carrinho de compras.html
@@ -39,7 +39,7 @@
 			<ul class="menu__profile">
 					<li>
 					<img class="login" alt="login" src="./img/profile.svg">
-					<a class="login" href="#">LOGIN</a>
+					<a class="login" href="./Login.html">LOGIN</a>
 					</li>
 
 					<li>
@@ -184,7 +184,7 @@
 				<div class="alinhamento_botao">
 				<div></div>
 				<div>
-					<button class="botao_amarelo" type="button">FINALIZAR COMPRA</button>
+					<a href='./Lista-de-Produtos---Cerveja-master/layout--checkout.html' class="botao_amarelo" type="button">FINALIZAR COMPRA</a>
 				</div>
 			</div>
 			</div>
