--- a/home-loja.html
+++ b/home-loja.html
@@ -23,8 +23,7 @@
 <body>
 	<header class="cabecalho">
 		<nav class="menu">
-			<a class="menu__link" href="./index.html"><img class="logo" alt="Logo Goró"
-					src="./img/logo goro 1.png" />
+			<a class="menu__link" href="./index.html"><img class="logo" alt="Logo Goró" src="./img/logo goro 1.png" />
 			</a>
 			<ul class="menu__lista">
 				<li class="menu__item">
@@ -307,19 +306,6 @@
 		<a class="produtos__botao" href="#">VER TODOS OS PRODUTOS</a>
 	</section>
 
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-	<script>
-		const swiper = new Swiper('.swiper', {
-			speed: 400,
-			spaceBetween: 10,
-			slidesPerView: 1,
-			pagination: {
-				el: '.swiper-pagination',
-				type: 'bullets',
-			},
-		});
-	</script>
-
 	<hr class="amarelo" />
 	<hr class="vermelho" />
 	<hr class="preto" />
@@ -398,6 +384,10 @@
 			0 - Cidade, ES
 		</p>
 	</footer>
+
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+	<script src="script.js"></script>
+
 </body>
 
 </html>
