Ajuste CSS e HTML cadastro
Ajustado o flexbox dos dados de login e dados de endereço de acordo com exemplo da Cami

--- a/cadastro.html
+++ b/cadastro.html
@@ -83,7 +83,6 @@
 			</div>
 		</div>
 
-		<!-- <section > -->
 		<form class="form">
 			<div class="teste">
 				<input type="nome" placeholder="Nome">
@@ -100,100 +99,70 @@
 			<span class="form__erro">Mensagem de erro</span>
 		</form>
 
-		<!-- </section> -->
-
 	</section>
 
-	<div class="cadastro">
-		<h3>
-			<div><img src="./img/cadeado.svg" /> &nbspDADOS DE LOGIN</div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div class="cadastro__circulocinza">1</div>
-			<div class="cadastro__circuloamarelo">2</div>
-			<div class="cadastro__circulocinza">3</div>
-		</h3>
-	</div>
-	<section class="form">
-		<form>
-			<div>
+	<section class="section__cadastro">
+
+		<div class="cadastro">
+			<div class="cadastro__titulo">
+				<img src="./img/cadeado.svg" />
+				<h3>DADOS DE LOGIN</h3>
+			</div>
+
+			<div class="cadastro__estapa">
+				<p class="cadastro__circulocinza">1</p>
+				<p class="cadastro__circuloamarelo">2</p>
+				<p class="cadastro__circulocinza">3</p>
+			</div>
+		</div>
+
+		<form class="form">
+			<div class="teste">
 				<input type="email" placeholder="E-mail">
 				<input type="emailConfirmar" placeholder="Confirme seu e-mail">
 			</div>
-			<input type="senha" placeholder="Senha">
-			<input type="senhaConfirmar" placeholder="Confirme sua senha">
+			<div class="teste">
+				<input type="senha" placeholder="Senha">
+				<input type="senhaConfirmar" placeholder="Confirme sua senha">
+			</div>
 		</form>
+
 	</section>
 
-	<div class="cadastro">
-		<h3>
-			<div><img src="./img/casa.svg" /> &nbspDADOS DE ENDEREÇO</div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div class="cadastro__circulocinza">1</div>
-			<div class="cadastro__circulocinza">2</div>
-			<div class="cadastro__circuloamarelo">3</div>
-		</h3>
-	</div>
-	<section class="form">
-		<form>
-			<div><input type="cep" placeholder="CEP | 00000-000"></div>
-			<div>
+	<section class="section__cadastro">
+
+		<div class="cadastro">
+			<div class="cadastro__titulo">
+				<img src="./img/casa.svg" />
+				<h3>DADOS DE ENDEREÇO</h3>
+			</div>
+
+			<div class="cadastro__estapa">
+				<p class="cadastro__circulocinza">1</p>
+				<p class="cadastro__circulocinza">2</p>
+				<p class="cadastro__circuloamarelo">3</p>
+			</div>
+		</div>
+
+		<form class="form">
+			<div class="teste">
+				<input type="cep" placeholder="CEP | 00000-000">
+			</div>
+			<div class="teste">
 				<input type="cidade" placeholder="Cidade">
 				<input type="estado" placeholder="Estado">
 			</div>
-			<div>
+			<div class="teste">
 				<input type="endereco" placeholder="Rua">
 				<input type="complemento" placeholder="Complemento">
 			</div>
-			<div>
+			<div class="teste">
 				<input type="numero" placeholder="Número">
 				<input type="bairro" placeholder="Bairro">
 			</div>
 		</form>
-		<a class="cadastro__botao" href="#">CRIAR CONTA</a><br>
+		<a class="cadastro__botao" href="#">CRIAR CONTA</a>
 	</section>
-
 
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 	<script>
