Validando email e senha

--- a/Login.html
+++ b/Login.html
@@ -70,7 +70,7 @@
 			<h3 class="form__subtitulo">
 				Conecte-se para finalizar a compra
 			</h3>
-			<input type="email" placeholder="E-mail" autocomplete="username" id="email" />
+			<input placeholder="E-mail" autocomplete="username" id="email" />
 			<input type="password" placeholder="Senha" autocomplete="current-password" id="senha" />
 			<a href="#" class="esqueci__senha">Esqueci a minha senha</a>
 			<span class="form__erro"></span>
