Commit do hover do menu

--- a/home-loja.html
+++ b/home-loja.html
@@ -26,28 +26,28 @@
 			<a class="menu__link" href="./index.html"><img class="logo" alt="Logo Goró" src="./img/logo goro 1.png" />
 			</a>
 			<ul class="menu__lista">
-				<li class="menu__item">
-					<a class="menu__linka" href="./Lista-de-Produtos---Cerveja-master/index.html">CERVEJAS</a>
+				<li id="menuOne" class="menu__item">
+					<a onmouseover="mouseOverMenu()" onmouseout="mouseOutMenu()" class="menu__linka" href="./Lista-de-Produtos---Cerveja-master/index.html">CERVEJAS</a>
 				</li>
-				<li class="menu__item">
-					<a class="menu__linka" href="./Lista - Acessórios/index.html">ACESSÓRIOS</a>
+				<li id="menuTwo" class="menu__item">
+					<a onmouseover="mouseOverMenuTwo()" onmouseout="mouseOutMenuTwo()" class="menu__linka" href="./Lista - Acessórios/index.html">ACESSÓRIOS</a>
 				</li>
-				<li class="menu__item">
-					<a class="menu__linka" href="./Lista - Kits/index.html">KITS</a>
+				<li id="menuThree" class="menu__item">
+					<a onmouseover="mouseOverMenuThree()" onmouseout="mouseOutMenuThree()"  class="menu__linka" href="./Lista - Kits/index.html">KITS</a>
 				</li>
 			</ul>
 		</nav>
 
 		<nav class="redes">
 			<ul class="menu__lista">
-				<li class="menu__item">
-					<a class="menu__link" href="./Login.html"><img class="redes__logo" alt="Login"
+				<li id="menuFour" class="menu__item">
+					<a onmouseover="mouseOverMenuFour()" onmouseout="mouseOutMenuFour()" class="menu__link" href="./Login.html"><img class="redes__logo" alt="Login"
 							src="./img/login.svg" />
 						LOGIN
 					</a>
 				</li>
-				<li class="menu__item">
-					<a class="menu__link" href="./carrinho de compras.html"><img class="redes__logo" alt="Carrinho"
+				<li id="menuFive" class="menu__item">
+					<a onmouseover="mouseOverMenuFive()"onmouseout="mouseOutMenuFive()"  class="menu__link" href="./carrinho de compras.html"><img class="redes__logo" alt="Carrinho"
 							src="./img/carrinho.svg" />
 						CARRINHO
 					</a>
