Ajustes HTML e CSS
Transformação do bota de link para submit no form também.

--- a/cadastro.html
+++ b/cadastro.html
@@ -89,12 +89,12 @@
 				<input type="sobrenome" placeholder="Sobrenome" id="sobrenome">
 			</div>
 			<div class="teste">
-				<input type="dataNascimento" placeholder="Data de Nascimento | 00/00/0000">
-				<input type="genero" placeholder="Gênero | ex: Feminino">
+				<input type="dataNascimento" placeholder="Data de Nascimento | 00/00/0000" id="dataNascimento">
+				<input type="genero" placeholder="Gênero | ex: Feminino" id="genero">
 			</div>
 			<div class="teste">
-				<input type="CPF" placeholder="CPF | 000.000.000-00">
-				<input type="telefoneContato" placeholder="Telefone | (00) 00000-0000">
+				<input type="CPF" placeholder="CPF | 000.000.000-00" id="CPF">
+				<input type="telefoneContato" placeholder="Telefone | (00) 00000-0000" id="telefoneContato">
 			</div>
 			<span class="form__erro">Mensagem de erro</span>
 		</form>
@@ -163,7 +163,7 @@
 			</div>
 		</form>
 			<div class="teste">
-				<a class="cadastro__botao" href="#">CRIAR CONTA</a>
+				<button type="submit" class="cadastro__botao">CRIAR CONTA</button>
 			</div>
 			</section>
 
