atualizado organização de pastas

--- a/pages/login/Login.html
+++ b/pages/login/Login.html
@@ -39,19 +39,21 @@
 					<li class="menu__item">
 						<a
 							class="menu__linka"
-							href="./Lista-de-Produtos---Cerveja-master/index.html"
+							href="../lists/listBeers/listBeer.html"
 							>CERVEJAS</a
 						>
 					</li>
 					<li class="menu__item">
 						<a
 							class="menu__linka"
-							href="./Lista - Acessórios/index.html"
+							href="../lists/listAcessories/index.html"
 							>ACESSÓRIOS</a
 						>
 					</li>
 					<li class="menu__item">
-						<a class="menu__linka" href="./Lista - Kits/index.html"
+						<a
+							class="menu__linka"
+							href="../lists/listKits/index.html"
 							>KITS</a
 						>
 					</li>
@@ -71,7 +73,9 @@
 						</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link" href="./carrinho de compras.html"
+						<a
+							class="menu__link"
+							href="../shoppingCart/shoppingCart.html"
 							><img
 								class="redes__logo"
 								alt="Carrinho"
@@ -135,19 +139,19 @@
 				<div class="footer__inst">
 					<h5>INSTITUCIONAL</h5>
 					<li>
-						<a href="./index.html"> Home </a>
+						<a href="../../index.html"> Home </a>
 					</li>
 					<li>
-						<a href="./index.html#info--menu"> Portfólio </a>
+						<a href="../../index.html#info--menu"> Portfólio </a>
 					</li>
 					<li>
 						<a href="#"> Contato </a>
 					</li>
 					<li>
-						<a href="./index.html#about"> Sobre nós </a>
+						<a href="../../index.html#about"> Sobre nós </a>
 					</li>
 					<li>
-						<a href="./home-loja.html"> loja </a>
+						<a href="../homeStore/homeStore.html"> loja </a>
 					</li>
 				</div>
 
