--- a/pages/shoppingCart/shoppingCart.html
+++ b/pages/shoppingCart/shoppingCart.html
@@ -19,7 +19,7 @@
 <body>
 	<header class="cabecalho">
 		<nav class="menu">
-			<a class="menu__link" href="./homeStore.html"
+			<a class="menu__link" href="../homeStore/homeStore.html"
 				><img
 					class="logo"
 					alt="Logo Goró"
@@ -30,19 +30,19 @@
 				<li class="menu__item">
 					<a
 						class="menu__linka"
-						href="./Lista-de-Produtos---Cerveja-master/index.html"
+						href="../lists/listBeers/listBeer.html"
 						>CERVEJAS</a
 					>
 				</li>
 				<li class="menu__item">
 					<a
 						class="menu__linka"
-						href="./Lista - Acessórios/index.html"
+						href="../lists/listAcessories/index.html"
 						>ACESSÓRIOS</a
 					>
 				</li>
 				<li class="menu__item">
-					<a class="menu__linka" href="./Lista - Kits/index.html"
+					<a class="menu__linka" href="../lists/listKits/index.html"
 						>KITS</a
 					>
 				</li>
@@ -62,7 +62,7 @@
 					</a>
 				</li>
 				<li class="menu__item">
-					<a class="menu__link" href="./carrinho de compras.html"
+					<a class="menu__link" href="../shoppingCart/shoppingCart.html"
 						><img
 							class="redes__logo"
 							alt="Carrinho"
@@ -218,7 +218,7 @@
 				<div class="alinhamento_botao">
 				<div></div>
 				<div>
-					<a href='./Lista-de-Produtos---Cerveja-master/layout--checkout.html' class="botao_amarelo" type="button">FINALIZAR COMPRA</a>
+					<a href='../checkout/checkout.html' class="botao_amarelo" type="button">FINALIZAR COMPRA</a>
 				</div>
 			</div>
 			</div>
@@ -241,19 +241,19 @@
 					<ul>
 						<h5>INSTITUCIONAL</h5>
 						<li>
-							<a href="./index.html"> Home </a>
+							<a href="../../index.html"> Home </a>
 						</li>
 						<li>
-							<a href="./index.html#info--menu"> Portfólio </a>
+							<a href="../../index.html#info--menu"> Portfólio </a>
 						</li>
 						<li>
 							<a href="#"> Contato </a>
 						</li>
 						<li>
-							<a href="./index.html#about"> Sobre nós </a>
+							<a href="../../index.html#about"> Sobre nós </a>
 						</li>
 						<li>
-							<a href="./home-loja.html"> loja </a>
+							<a href="../homeStore/homeStore.html"> loja </a>
 						</li>
 					</ul>
 				</div>
