--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Goró</title>
-		<link rel="stylesheet" href="./css/index.css" />
+		<link rel="stylesheet" href="./src/css/index.css" />
 		<script
 			src="https://kit.fontawesome.com/8efdacdf0c.js"
 			crossorigin="anonymous"
@@ -24,13 +24,13 @@
 						<a class="nav--link" href="#info--menu">PORTFÓLIO</a>
 					</li>
 					<li>
-						<img alt="logo" src="./img/logo.png" class="logo" />
+						<img alt="logo" src="./src/img/logo.png" class="logo" />
 					</li>
 					<li><a class="nav--link" href="#about">SOBRE NÓS</a></li>
 					<li>
 						<a
 							class="nav--link"
-							href="./home-loja.html"
+							href="./pages/homeStore/homeStore.html"
 							target="_blank"
 							>LOJA</a
 						>
@@ -61,7 +61,10 @@
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<div>
-							<img src="./img/banner topo 1.png" alt="banner" />
+							<img
+								src="./src/img/banner topo 1.png"
+								alt="banner"
+							/>
 						</div>
 						<div class="conteudo">
 							<p class="conteudo-um">CATEGORIA</p>
@@ -76,7 +79,10 @@
 					</div>
 					<div class="swiper-slide">
 						<div>
-							<img src="./img/banner topo 1.png" alt="banner" />
+							<img
+								src="./src/img/banner topo 1.png"
+								alt="banner"
+							/>
 						</div>
 						<div class="conteudo">
 							<p class="conteudo-um">CATEGORIA</p>
@@ -91,7 +97,10 @@
 					</div>
 					<div class="swiper-slide">
 						<div>
-							<img src="./img/banner topo 1.png" alt="banner" />
+							<img
+								src="./src/img/banner topo 1.png"
+								alt="banner"
+							/>
 						</div>
 						<div class="conteudo">
 							<p class="conteudo-um">CATEGORIA</p>
@@ -149,7 +158,7 @@
 				</p>
 				<img
 					alt="info 1"
-					src="./img/american pale ale.png"
+					src="./src/img/american pale ale.png"
 					class="img--info"
 				/>
 			</div>
@@ -165,7 +174,11 @@
 					augue, ultrices vel urna pharetra, consectetur aliquet
 					tellus.
 				</p>
-				<img alt="info 2" src="./img/double.png" class="img--info" />
+				<img
+					alt="info 2"
+					src="./src/img/double.png"
+					class="img--info"
+				/>
 			</div>
 			<div id="show--info3" hidden>
 				<p>
@@ -179,7 +192,7 @@
 					augue, ultrices vel urna pharetra, consectetur aliquet
 					tellus.
 				</p>
-				<img alt="info 3" src="./img/brown.png" class="img--info" />
+				<img alt="info 3" src="./src/img/brown.png" class="img--info" />
 			</div>
 		</section>
 
@@ -208,12 +221,12 @@
 							ultrices vel urna pharetra, consectetur aliquet
 							tellus.
 						</p>
-						<img alt="brindando" src="./img/image 6.png" />
+						<img alt="brindando" src="./src/img/image 6.png" />
 					</div>
 					<div class="coluna">
 						<img
 							alt="dois caras contemplando cerveja"
-							src="./img/image 1.png"
+							src="./src/img/image 1.png"
 						/>
 						<p>
 							Sed consequat odio at eros viverra, at ultricies
@@ -237,7 +250,7 @@
 					<img
 						class="logo"
 						alt="Logo Goró"
-						src="./img/logo goro 1.png"
+						src="./src/img/logo goro 1.png"
 					/>
 				</div>
 
@@ -257,7 +270,9 @@
 							<a href="#about"> Sobre nós </a>
 						</li>
 						<li>
-							<a href="./home-loja.html"> loja </a>
+							<a href="./pages/homeStore/homeStore.html">
+								loja
+							</a>
 						</li>
 					</ul>
 				</div>
@@ -281,7 +296,7 @@
 									><img
 										class="redes__logo"
 										alt="Instagram"
-										src="./img/Instagram.png"
+										src="./src/img/Instagram.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -289,7 +304,7 @@
 									><img
 										class="redes__logo"
 										alt="YouTube"
-										src="./img/YouTube.png"
+										src="./src/img/YouTube.png"
 								/></a>
 							</li>
 							<li class="footer__item">
@@ -297,7 +312,7 @@
 									><img
 										class="redes__logo"
 										alt="Facebook"
-										src="./img/Facebook.png"
+										src="./src/img/Facebook.png"
 								/></a>
 							</li>
 						</ul>
